--- a/ksap/index.html
+++ b/ksap/index.html
@@ -92,7 +92,7 @@
     var utm_content = new URL(document.location).searchParams.get("utm_content");
     var utm_medium = new URL(document.location).searchParams.get("utm_medium");
 
-    // fbq('track', 'AddToCart');
+    fbq('track', 'ViewContent');
     window.location = "https://"+d+"/"+slg+"/?utm_source="+utm_source+"&utm_campaign="+utm_campaign+"&utm_medium="+utm_medium+"&utm_content="+utm_content;
 
   }
